@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2010-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2004-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -28,6 +28,7 @@
 
 package org.opennms.netmgt.mock;
 
+import java.net.InetAddress;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -35,8 +36,10 @@ import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.lang.builder.ToStringBuilder;
-import org.opennms.core.utils.LogUtils;
+import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.netmgt.xml.event.Event;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * A test network configuration
@@ -45,12 +48,16 @@ import org.opennms.netmgt.xml.event.Event;
  * @version $Id: $
  */
 public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
+	
+	private static final Logger LOG = LoggerFactory.getLogger(MockNetwork.class);
+
 
     /**
      * <p>createDownEvent</p>
      *
      * @return a {@link org.opennms.netmgt.xml.event.Event} object.
      */
+    @Override
     public Event createDownEvent() {
         throw new UnsupportedOperationException("Cannot generate down event for the network");
     }
@@ -59,6 +66,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      *
      * @return a {@link org.opennms.netmgt.xml.event.Event} object.
      */
+    @Override
     public Event createUpEvent() {
         throw new UnsupportedOperationException("Cannot generate up event for the network");
     }
@@ -67,6 +75,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      *
      * @return a {@link org.opennms.netmgt.xml.event.Event} object.
      */
+    @Override
     public Event createNewEvent() {
         throw new UnsupportedOperationException("Cannot generate new event for the network");
     }
@@ -75,6 +84,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      *
      * @return a {@link org.opennms.netmgt.xml.event.Event} object.
      */
+    @Override
     public Event createDeleteEvent() {
         throw new UnsupportedOperationException("Cannot generate delete event for the network");
     }
@@ -93,6 +103,10 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     private String m_ifAlias;
 
     private int m_nextServiceId = 1;
+
+    private MockPathOutage m_currentOutage;
+
+	private MockService m_currentService;
 
     /**
      * <p>Constructor for MockNetwork.</p>
@@ -119,6 +133,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     public void setCriticalService(String svcName) {
         m_criticalService = svcName;
     }
+    
     
     /**
      * <p>getIfAlias</p>
@@ -175,6 +190,13 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
         return m_currentNode;
     }
 
+    public MockPathOutage addPathOutage(int nodeid, InetAddress ipAddr, String svcName) {
+    	//m_currentOutage = (MockPathOutage) addMember(new MockPathOutage(this,nodeid, ipAddr, svcName));
+    	m_currentOutage = (MockPathOutage) m_currentNode.addMember(new MockPathOutage(this, m_currentService));
+    	return m_currentOutage;
+    	
+    }
+
     // model 
     /**
      * <p>addService</p>
@@ -186,7 +208,8 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      */
     public MockService addService(int nodeId, String ipAddr, String svcName) {
         int serviceId = getServiceId(svcName);
-        return getInterface(nodeId, ipAddr).addService(svcName, serviceId);
+        m_currentService =  getInterface(nodeId, ipAddr).addService(svcName, serviceId);
+        return m_currentService;
     }
 
     // model
@@ -198,7 +221,8 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      */
     public MockService addService(String svcName) {
         int serviceId = getServiceId(svcName);
-        return m_currentInterface.addService(svcName, serviceId);
+        m_currentService = m_currentInterface.addService(svcName, serviceId);
+        return m_currentService;
 
     }
 
@@ -236,6 +260,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     }
 
     // impl
+    @Override
     Object getKey() {
         return this;
     }
@@ -258,7 +283,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      * @return a {@link org.opennms.netmgt.mock.MockNode} object.
      */
     public MockNode getNode(int i) {
-        return (MockNode) getMember(new Integer(i));
+        return (MockNode) getMember(Integer.valueOf(i));
     }
 
     // model
@@ -276,6 +301,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
                 return node;
             }
 
+            @Override
             public void visitInterface(MockInterface iface) {
                 if (iface.getIpAddr().equals(ipAddr)) {
                     node = iface.getNode();
@@ -300,7 +326,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
      */
     public MockService getService(int nodeid, String ipAddr, String svcName) {
     	final MockInterface iface = getInterface(nodeid, ipAddr);
-        LogUtils.debugf(this, "getService(%d, %s, %s) = %s", nodeid, ipAddr, svcName, iface);
+        LOG.debug("getService({}, {}, {}) = {}", nodeid, ipAddr, svcName, iface);
         return (iface == null ? null : iface.getService(svcName));
     }
 
@@ -321,7 +347,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
             serviceId = m_nameToIdMap.get(svcName).intValue();
         } else {
             serviceId = m_nextServiceId++;
-            Integer serviceIdObj = new Integer(serviceId);
+            Integer serviceIdObj = Integer.valueOf(serviceId);
             m_nameToIdMap.put(svcName, serviceIdObj);
             m_idToNameMap.put(serviceIdObj, svcName);
         }
@@ -395,6 +421,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
         super.visit(v);
         v.visitNetwork(this);
         visitMembers(v);
+        
     }
     
     /**
@@ -405,6 +432,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     public int getNodeCount() {
         class NodeCounter extends MockVisitorAdapter {
             int count = 0;
+            @Override
             public void visitNode(MockNode node) {
                 count++;
             }
@@ -425,6 +453,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     public int getInterfaceCount() {
         class InterfaceCounter extends MockVisitorAdapter {
             int count = 0;
+            @Override
             public void visitInterface(MockInterface iface) {
                 count++;
             }
@@ -445,6 +474,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
     public int getServiceCount() {
         class ServiceCounter extends MockVisitorAdapter {
             int count = 0;
+            @Override
             public void visitService(MockService svc) {
                 count++;
             }
@@ -457,6 +487,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
         return counter.getCount();
     }
 
+    @Override
     public String toString() {
     	return new ToStringBuilder(this)
     		.append("critical-service", m_criticalService)
@@ -473,6 +504,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
         addInterface("192.168.1.1");
         setIfAlias("dot1 interface alias");
         addService("ICMP");
+        addPathOutage(1, InetAddressUtils.addr("192.168.1.1"), "ICMP");
         addService("SMTP");
         addInterface("192.168.1.2");
         setIfAlias("dot2 interface alias");
@@ -490,6 +522,7 @@ public class MockNetwork extends MockContainer<MockContainer<?,?>,MockElement> {
         addInterface("192.168.1.5");
         addService("SMTP");
         addService("HTTP");
+        //addOutage(1, InetAddressUtils.addr("192.168.1.1"), "ICMP");
     }
 
 }
